--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>My first git</title>
 </head>
 <body>
+    <h3>BISMILLAHIR RAHMANIR RAMIM</h3>
+    <div>
+        <p class="first">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam ad reprehenderit quasi possimus! Ab, provident iure, amet repellat tempora autem vitae libero suscipit soluta minima aut quaerat assumenda possimus dicta.
+        </p>
+    </div>
+    <div>
+        <p class="middle">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam ad reprehenderit quasi possimus! Ab, provident iure, amet repellat tempora autem vitae libero suscipit soluta minima aut quaerat assumenda possimus dicta.
+        </p>
+    </div>
+    <div>
+        <p class="third">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam ad reprehenderit quasi possimus! Ab, provident iure, amet repellat tempora autem vitae libero suscipit soluta minima aut quaerat assumenda possimus dicta.
+        </p>
+    </div>
+    
     
 </body>
 </html>
